Rename TransientJob to BatchJob